--- a/www/package.json
+++ b/www/package.json
@@ -23,6 +23,11 @@
     "vue": "^3.4.18",
     "vue-router": "^4.0.12"
   },
+  "optionalDependencies": {
+    "omnikee-wasm": "file:../lib/pkg",
+    "@tauri-apps/api": "^2",
+    "@tauri-apps/plugin-opener": "^2"
+  },
   "devDependencies": {
     "@eslint/js": "^9.14.0",
     "eslint": "^9.14.0",
