--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2024"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
+serde = { version = "1.0.219", features = ["derive"] }
 wasm-bindgen = "0.2"
 
