--- a/www/package.json
+++ b/www/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.16.4",
+    "@tauri-controls/vue": "^0.4.0",
     "@vueuse/core": "^13.1.0",
     "axios": "^1.2.1",
     "pinia": "^3.0.1",
