--- a/www/package.json
+++ b/www/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.16.4",
+    "@tauri-apps/plugin-os": "^2.2.1",
     "@tauri-controls/vue": "^0.4.0",
     "@vueuse/core": "^13.1.0",
     "axios": "^1.2.1",
@@ -43,6 +44,7 @@
     "globals": "^15.12.0",
     "prettier": "^3.3.3",
     "typescript": "~5.5.3",
+    "unplugin-vue-components": "^28.5.0",
     "vite-plugin-checker": "^0.9.0",
     "vue-tsc": "^2.0.29"
   },
