switch to unplugin-vue-router

--- a/www/tsconfig.json
+++ b/www/tsconfig.json
@@ -1,3 +1,9 @@
 {
-  "extends": "./.quasar/tsconfig.json"
+  "extends": "./.quasar/tsconfig.json",
+  "compilerOptions": {
+    "moduleResolution": "bundler",
+    "types": [
+      "unplugin-vue-router/client"
+    ]
+  }
 }
