--- a/www/package.json
+++ b/www/package.json
@@ -45,6 +45,8 @@
     "prettier": "^3.3.3",
     "typescript": "~5.5.3",
     "unplugin-vue-components": "^28.5.0",
+    "unplugin-vue-layouts": "^0.0.1",
+    "unplugin-vue-router": "^0.12.0",
     "vite-plugin-checker": "^0.9.0",
     "vue-tsc": "^2.0.29"
   },
