--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -3,6 +3,9 @@ name = "omnikee-lib"
 version = "0.1.0"
 edition = "2024"
 
+[features]
+tauri = []
+
 [lib]
 crate-type = ["cdylib", "rlib"]
 
@@ -19,3 +22,5 @@ anyhow = "1.0.98"
 serde-wasm-bindgen = "0.6.5"
 
 
+[target.wasm32-unknown-unknown]
+rustflags = ['--cfg', 'getrandom_backend="wasm_js"']
