--- a/tauri/Cargo.toml
+++ b/tauri/Cargo.toml
@@ -23,4 +23,5 @@ serde = { version = "1.0", features = ["derive"] }
 log = "0.4"
 tauri = { version = "2.4.1", features = [] }
 tauri-plugin-log = "2.0.0-rc"
-omnikee-lib = { path = "../lib" }
+
+omnikee-lib = { path = "../lib", features = ["tauri"] }
