--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -22,6 +22,7 @@ anyhow = "1.0.98"
 serde-wasm-bindgen = "0.6.5"
 console_error_panic_hook = "0.1.7"
 chrono = { version = "0.4.40", features = ["wasmbind"] }
+tsify = { version = "0.5.5", features = ["js"] }
 
 
 [target.wasm32-unknown-unknown]
