--- a/www/package.json
+++ b/www/package.json
@@ -48,6 +48,7 @@
     "unplugin-vue-layouts": "^0.0.1",
     "unplugin-vue-router": "^0.12.0",
     "vite-plugin-checker": "^0.9.0",
+    "vite-plugin-vue-devtools": "^7.7.5",
     "vue-tsc": "^2.0.29"
   },
   "engines": {
