--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,8 +19,8 @@ jobs:
           #  args: "--target x86_64-apple-darwin"
           - platform: "ubuntu-24.04"
             args: ""
-          #- platform: "windows-latest"
-          #  args: ""
+          - platform: "windows-latest"
+            args: ""
 
     runs-on: ${{ matrix.platform }}
     steps:
@@ -76,7 +76,7 @@ jobs:
         with:
           tagName: app-v__VERSION__ # the action automatically replaces \_\_VERSION\_\_ with the app version.
           projectPath: ./tauri
-          releaseName: "App v__VERSION__"
+          releaseName: "OmniKee v__VERSION__"
           releaseBody: "See the assets to download this version and install."
           releaseDraft: true
           prerelease: false
