--- a/tauri/Cargo.toml
+++ b/tauri/Cargo.toml
@@ -25,3 +25,4 @@ tauri = { version = "2.4.1", features = [] }
 tauri-plugin-log = "2.0.0-rc"
 
 omnikee-lib = { path = "../lib", features = ["tauri"] }
+tauri-plugin-opener = "2"
