--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -238,7 +238,7 @@ jobs:
           track: qa
           status: draft
           inAppUpdatePriority: 2
-          userFraction: 1.0
+          #userFraction: 0.5
           #whatsNewDirectory: distribution/whatsnew
           #mappingFile: app/build/outputs/mapping/release/mapping.txt
           #debugSymbols: app/intermediates/merged_native_libs/release/out/lib
