--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -215,7 +215,9 @@ jobs:
 
       - name: build app bundle
         working-directory: ./tauri
-        run: npm run tauri android build -v
+        run: |
+          npm install -D @tauri-apps/cli@latest
+          npm run tauri android build -v
         env:
             NDK_HOME: ${{ env.ANDROID_HOME }}/ndk/27.0.11902837
 
