--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -243,7 +243,7 @@ jobs:
           releaseFiles: tauri/gen/android/app/build/outputs/bundle/universalRelease/app-universal-release.aab
           track: internal
           status: draft
-          inAppUpdatePriority: 2
+          #inAppUpdatePriority: 2
           #userFraction: 0.5
           #whatsNewDirectory: distribution/whatsnew
           #mappingFile: app/build/outputs/mapping/release/mapping.txt
