--- a/tauri/Cargo.toml
+++ b/tauri/Cargo.toml
@@ -26,3 +26,7 @@ tauri-plugin-log = "2.0.0-rc"
 
 omnikee-lib = { path = "../lib", features = ["tauri"] }
 tauri-plugin-opener = "2"
+
+[profile.release]
+codegen-units = 1
+lto = true
