--- a/www/package.json
+++ b/www/package.json
@@ -20,6 +20,7 @@
     "@tauri-controls/vue": "^0.4.0",
     "@vueuse/core": "^13.1.0",
     "axios": "^1.2.1",
+    "file-saver": "^2.0.5",
     "pinia": "^3.0.1",
     "quasar": "^2.16.0",
     "vue": "^3.4.18",
@@ -35,6 +36,7 @@
     "@eslint/js": "^9.14.0",
     "@intlify/unplugin-vue-i18n": "^4.0.0",
     "@quasar/app-vite": "^2.1.0",
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^20.5.9",
     "@vue/eslint-config-prettier": "^10.1.0",
     "@vue/eslint-config-typescript": "^14.4.0",
