--- a/tauri/Cargo.toml
+++ b/tauri/Cargo.toml
@@ -21,12 +21,13 @@ tauri-build = { version = "2.1.1", features = [] }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 log = "0.4"
-tauri = { version = "2.4.1", features = [] }
+tauri = { version = "2.5.1", features = [] }
 tauri-plugin-log = "2.0.0-rc"
 
 omnikee-lib = { path = "../lib", features = ["tauri"] }
 tauri-plugin-opener = "2"
 tauri-plugin-dialog = "2"
+tauri-plugin-fs = "2"
 
 [profile.release]
 codegen-units = 1
